--- a/versions.gradle
+++ b/versions.gradle
@@ -16,6 +16,7 @@ versions.constraint_layout = "2.1.0"
 versions.core_ktx = "1.6.0"
 versions.coroutines = "1.5.1"
 versions.dagger = "2.24"
+versions.hilt = "2.38.1"
 versions.koin = "2.2.0"
 versions.dexmaker = "2.2.0"
 versions.espresso = "3.3.0"
@@ -43,7 +44,10 @@ versions.rxjava2 = "2.1.3"
 versions.timber = "4.7.1"
 versions.transition = "1.3.0"
 versions.truth = "1.0.1"
+versions.turbine = "0.6.0"
 versions.work = "2.2.0"
+versions.datastore = "1.0.0"
+versions.exoplayer = "2.15.0"
 ext.versions = versions
 
 def build_versions = [:]
@@ -99,6 +103,11 @@ dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
 dagger.android_support_compiler = "com.google.dagger:dagger-android-processor:$versions.dagger"
 deps.dagger = dagger
 
+def hilt = [:]
+hilt.android = "com.google.dagger:hilt-android:$versions.hilt"
+hilt.compiler = "com.google.dagger:hilt-compiler:$versions.hilt"
+deps.hilt = hilt
+
 def koin = [:]
 koin.koin_androidx_scope = "org.koin:koin-androidx-scope:$versions.koin"
 koin.koin_androidx_viewmodel = "org.koin:koin-androidx-viewmodel:$versions.koin"
@@ -151,6 +160,7 @@ def mockito = [:]
 mockito.core = "org.mockito:mockito-core:$versions.mockito"
 mockito.all = "org.mockito:mockito-all:$versions.mockito_all"
 mockito.android = "org.mockito:mockito-android:$versions.mockito_android"
+mockito.kotlin = "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
 deps.mockito = mockito
 
 deps.mock_web_server = "com.squareup.okhttp3:mockwebserver:$versions.mockwebserver"
@@ -198,6 +208,9 @@ deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.transition = "androidx.transition:transition:$versions.transition"
 
 deps.truth = "com.google.truth:truth:$versions.truth"
+deps.turbine = "app.cash.turbine:turbine:$versions.turbine"
+
+deps.exoplayer = "com.google.android.exoplayer:exoplayer:$versions.exoplayer"
 
 def work = [:]
 work.runtime = "androidx.work:work-runtime:$versions.work"
@@ -205,6 +218,11 @@ work.testing = "androidx.work:work-testing:$versions.work"
 work.firebase = "androidx.work:work-firebase:$versions.work"
 work.runtime_ktx = "androidx.work:work-runtime-ktx:$versions.work"
 deps.work = work
+
+def datastore = [:]
+datastore.core = "androidx.datastore:datastore:$versions.datastore"
+datastore.preferences = "androidx.datastore:datastore-preferences:$versions.datastore"
+deps.datastore = datastore
 
 ext.deps = deps
 
